# Golf

./: .gitignore  Cargo.toml  Makefile.toml  build.rs  index.html  justfile  rust-toolchain.toml
assets/textures/: FullGrass.LICENSE.md  Grass.xcf  Middle Edge Grass.xcf
assets/tiles/: Grass.ron  Grass.xcf  Middle Bottom Grass.ron  Middle Left Grass.ron  Middle RIght Grass.ron  Middle Top Grass.ron  Top Grass.xcf  grass.ron
assets/tilesets/: background.ron
levels/: demo.toml  demo.xml  one.toml  schema.xsd
src/: main.rs
src/audio/: mod.rs
src/components/: ball.rs  mod.rs  vel.rs  walls.rs
src/graphics/: camera.rs  mod.rs  tiles.rs
src/levels/: def.rs  loader.rs  mod.rs
