[package]
name = "golf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0", features = ["bevy_sprite", "bevy_text", "wav"] }
bevy-inspector-egui = { version = "0.18.1", optional = true }
postcard = { version = "1.0.4", features = ["use-std"] }
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.7.3"

[features]
default = []
inspector = ["bevy-inspector-egui"]
debug_assets = ["bevy/debug_asset_server"]

[build-dependencies]
postcard = { version = "1.0.4", features = ["use-std"] }
serde = "1.0.188"
toml = "0.7.3"
