[package]
name = "golf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["bevy_sprite", "bevy_text", "wav"] }
bevy-inspector-egui = { version = "0.21.0", optional = true }
lazy_static = "1.4.0"
postcard = { version = "1.0", features = ["use-std"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[features]
default = []
inspector = ["bevy-inspector-egui"]

[build-dependencies]
postcard = { version = "1.0", features = ["use-std"] }
serde = "1.0"
toml = "0.8"
